fix(core/setting-item): info not align with top

--- a/packages/core/src/settings/setting-item.scss
+++ b/packages/core/src/settings/setting-item.scss
@@ -14,6 +14,7 @@
 }
 
 .typ-setting-info {
+  align-self: flex-start;
   flex: 1;
 }
 
